Fix Rate Limiting for tests and repair backend unit/integration tests
- Modify LimitadorTentativasLogin to bypass rate limiting in 'test' and 'e2e' profiles
- Fix NullPointerExceptions in service tests by mocking Services instead of Repositories
- Fix UnnecessaryStubbingExceptions in EventoProcessoListenerTest
- Update integration tests (CDU16, CDU17) and UsuarioServiceTest assertions
- Update .gitignore to ignore test artifacts